--- a/public/index.html
+++ b/public/index.html
@@ -223,8 +223,9 @@
   </div>
 
   <script>
-    const API_BASE   = 'http://localhost:3000/api';
-    const ADMIN_BASE = `${API_BASE}/admin`;
+  const API_BASE = process.env.REACT_APP_API_BASE || 'http://localhost:3000/api';
+const ADMIN_BASE = `${API_BASE}/admin`;
+
 
     let loginForm, signupForm, toggleBtns, messageBox;
 
