--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -348,7 +348,7 @@
   </div>
 
   <script>
-    const API_BASE = 'http://localhost:3000/api';
+const API_BASE = process.env.REACT_APP_API_BASE || 'http://localhost:3000/api';
     const token = localStorage.getItem('npi_token');
     const loginID = localStorage.getItem('LoginID');
     if (!token || !loginID) window.location.href = '/index.html';
