--- a/public/index.html
+++ b/public/index.html
@@ -223,7 +223,10 @@
   </div>
 
   <script>
-  const API_BASE = process.env.REACT_APP_API_BASE || 'http://localhost:3000/api';
+    const API_BASE = window.location.hostname === 'localhost'
+  ? 'http://localhost:3000/api'
+  : 'https://your-api-service.onrender.com/api';
+
 const ADMIN_BASE = `${API_BASE}/admin`;
 
 
